--- a/Documents/bp_sirljan_2012/3_analyza.tex
+++ b/Documents/bp_sirljan_2012/3_analyza.tex
@@ -176,6 +176,7 @@ access & boolean & true = přístup povolen, false = přístup zakázán\\
 %----------------------------------------------------
 
 \subsection{Ukázka použití}
+\label{Ukázka použití}
 Tato sekce prezentuje stručné ukázky použití.
 
 %-----------------------------
