--- a/Documents/bp_sirljan_2012/5_testovani.tex
+++ b/Documents/bp_sirljan_2012/5_testovani.tex
@@ -1,17 +1,12 @@
 \chapter{Testování}
 
-\begin{itemize}
- \item Způsob, průběh a výsledky testování.
- \item Srovnání s existujícími řešeními, pokud jsou známy.
-\end{itemize} 
+Testování bylo zaměřeno pouze na funkcionalitu. Vynecháno bylo testování rychlosti, práce s operační pamětí a spotřeby procesorového času. Testoval jsem jednotkovými testy za pomoci Ruby modulu \verb|Test::Unit| a informací z knihy Ruby - kompendium znalostí \cite{Ruby} a online tutoriálu \cite{ibm:unittesting}.
 
-
-Testování bylo zaměřeno pouza na funkcionalitu. Vynecháno bylo testování rychlosti, práce s operační pamětí, spotřeby procesorového času. Testoval jsem unit testama za pomocí Ruby modulu \verb|Test::Unit| a informací z knihy Ruby - kompendium znalostí \cite{Ruby} a online tutoriálu \cite{ibm:unittesting}.
-Test Coverage TODO
+Jako codecoverage software byl použit SimpleCov rubygem, ale výsledky byly nereprezentativní, nejspíše kvůli špatnému použití. Bohužel jsem se nikde v dokumentaci CimpleCov ani na webu nedopátral správného použití. Codecoverage pokrýval pouze řádky definující metody a třídy a to i v případě, kdy byly všechny testy zakomentovány. Z tohoto faktu usuzuji, že jsem buď nedodržel normu SimpleCov, nebo ho špatně použil. Nicméně si myslím, že pokrytí testy je dobré.
 
 \section{RubyACL}
-Testoval jsem každou veřejnou metodu u RubyACL. Celkem jsem vytvořil 43 testů s 119 asercema. Testy jsem rozdělil do 4 částí-souborů podle charakteru metod, které testují. Set1 testuje metody přímo spjaté s ACL, například load, save and rename. Set2 testuje metody, které vytváří ACL objekty. Set3 testuje metody, které upravují ACL objekty. Set4 testuje pouze metodu check.
-Testování probíhá neobvykle delší dobu, protože před každým spuštěním nového testu se do databáze nahrávájí testovací dokumenty a po každém testu se maže kolekce s testovacími daty. Hlavně nahrávání dokumentů probíhá poměrně dlouhou dobu. Čas provedení testů trvá asi 80 sekund.
+Testoval jsem každou veřejnou metodu u RubyACL. Celkem jsem vytvořil 43 testů s 119 porovnáními (anglicky assertion). Testy jsem rozdělil do 4 částí-souborů podle charakteru metod, které testuji. Set1 testuje metody přímo spjaté s ACL, například load, save and rename. Set2 testuje metody, které vytváří ACL objekty. Set3 testuje metody, které upravují ACL objekty. Set4 testuje pouze metodu check.
+Doba běhu testovací soupravy (anglicky test suit) trvá delší dobu než bývá obvyklé, protože před každým spuštěním nového testu se do databáze nahrávájí testovací dokumenty a po každém testu se maže kolekce s testovacími daty. Hlavně nahrávání dokumentů probíhá poměrně dlouhou dobu. Čas provedení testů je přibližně 80 sekund.
 
 \section{eXistAPI}
-Testoval jsem každou veřejnou metodu eXistAPI. Celkem jsem vytvořil 14 testů s 21 asercema. 
+Testoval jsem každou veřejnou metodu eXistAPI. Celkem jsem vytvořil 14 testů s 21 porovnáními (anglicky assertion). 
