Few minor changes in CD 2

--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -255,7 +255,7 @@ Chtěl bych především poděkovat panu Ing. Pavlu Strnadovi, že se mě ujal j
 This paper presents the design and implementation of library management access rights in the programming language Ruby.
 
 The library is designed for object XML database and is solved using the Access Control List. Library used for storing and querying the database itself, which communicates with the protocol for remote procedure call and for quering uses current query languages.
-The functionality of the library was developed and tested on eXistDB.
+The functionality of the library was developed and tested on eXist-db.
 
 % Prace v cestine musi krome abstraktu v anglictine obsahovat i
 % abstrakt v cestine.
