--- a/Documents/bp_sirljan_2012/reference.bib
+++ b/Documents/bp_sirljan_2012/reference.bib
@@ -62,7 +62,7 @@
 
 @ONLINE-Documentation{xupdate,
   author = "{Andreas Laux, Lars Martin}",
-  title = "xUpdate documentation",
+  title = "XUpdate documentation",
   cited = "16.\,5.\,2012",
   year =         2012,
   url = "http://xmldb-org.sourceforge.net/xupdate/xupdate-wd.html"
