--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -320,8 +320,6 @@ Funkčnost knihovny byla vyvíjena a testována pomocí databáze eXist-db.
 %*****************************************************************************
 % Úvod
 \include{1_uvod}
-TODO prepsat vsechny xQuery, xUpdate, xPath na velky X
-TODO odkaz na prvni vyskyt RubyGEM
 %*****************************************************************************
 % Popis problému, specifikace cíle
 \include{2_popis_problemu}
@@ -421,11 +419,12 @@ V této sekci se nachází výpis veřejných metod. Všechny metody i s paramet
 \item[phpGACL] Generic Access Control Lists with PHP
 \item[DTD] DTD
 \item[XML-RPC] XML Remote Procedure Call protokol
-\item[xQuery] Dotazovací jazyk nad XML dokumenty
+\item[XQuery] Dotazovací jazyk nad XML dokumenty
 \item[XPath] XML Path Language
 \item[W3C] World Wide Web Consortium
 \item[irb] Interactive Ruby Shell
 \item[JDK] Java Development Kit
+\item[RubyGem] Balíčkovací systém pro programovací jazyk Ruby
 \end{description}
 
 %*****************************************************************************
